  witnesses to search. In fact, the default search tactic is identical to:

        search with *.

  Please use this feature sparingly, and only when building proofs. After
  you are done with the proof, delete the "with" statements. These witnesses
  will NOT be portable across different versions of Abella, as they are very
  particular to the "search" tactic implementation.


Bugfixes

* Annotation mode (-a) output is no longer printed in other modes


Changes in 2.0.3 from 2.0.2
---------------------------

Potentially breaking changes

* Removed ~ and != notations (introduced in 2.0.2, and unused by anyone as
  far as I know). A general notation support may be considered for Abella
  in the future. Meanwhile, we prefer simplicity and predictability.


Additions

* The unfold tactic has an optional argument, "(all)", that produces a
  disjunction of all solutions to the matching problem of the conclusion of
  a subgoal and its relevant (co)definition. The disjuncts are produced in
  the same order as the clauses, but if a single clause has multiple ways to
  match the head then the disjuncts for that clause are in some unspecified
  order (that depends on the details of the unification algorithm).
* The following tactic forms have been added:

      apply *H to ...
      apply ... to ... *H ...
      backchain *H
      cut *H ...
      cut ... with *H
      inst *H with ...
      monotone *H with ...

  In each case, if H names a hypothesis, then the tactic consumes the
  hypothesis (like the clear tactic). Note that if hypothesis hints are
  given, then these hints are used *after* consuming the hypotheses. Thus,
  if one writes:

      foo : apply lem to *foo bar baz.

  then the hypothesis named foo is effectively *replaced* with a new
  hypothesis named foo that is the result of applying the lem to the old foo
  and the other arguments.
* Optional semi-colon allowed before the first clause in a definition or
  co-definition block.