@@ -67,6 +67,7 @@
     "nabla",         NABLA ;
     "on",            ON ;
     "permute",       PERMUTE ;
+    "pick",          PICK ;
     "rename",        RENAME ;
     "right",         RIGHT ;
     "search",        SEARCH ;
